[package]
name = "rumblecat"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

[dependencies]
async-trait = "^0.1"
bytes = "^1"
dotenv = "^0"
flag-mast = "^0.1"
prost = "0.7"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1.5", features = ["full"] }

[build-dependencies]
prost-build = "0.7"
