[package]
name = "rumblecat"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

[dependencies]
async-trait = "^0.1"
dotenv = "^0"
prost = "0.7"
rustls = { version = "^0.19", features = ["dangerous_configuration"] }
serde = { version = "^1", features = ["derive"] }
# serde_json = "^1"
tokio = { version = "^1.5", features = ["full"] }
tokio-rustls = "^0"
webpki = "^0.21"

[build-dependencies]
prost-build = "0.7"
